refactor: add separate binaries for utils

--- a/bin/install
+++ b/bin/install
@@ -1,6 +1,7 @@
 #!/usr/bin/env sh
 
 stow --restow --target="$HOME/.config" .config
+stow --restow --target="$HOME/.local" .local
 stow --restow --target="$HOME/.oh-my-zsh" .oh-my-zsh
 stow --restow --target="$HOME" home
 
